# openvpn-manager

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py
app/models/: __init__.py  client.py  user.py
app/routes/: __init__.py  api.py  auth.py  client_management.py  main.py  system_monitoring.py
app/scripts/: add-client.sh  connected-clients.sh  init-openvpn.sh  list-clients.sh  revoke-client.sh  system-metrics.sh  view-logs.sh
app/services/: __init__.py  backup_service.py  certificate_service.py  monitoring_service.py  openvpn_service.py  prometheus_service.py
app/static/css/: custom.css
app/tasks/: __init__.py  background_tasks.py
app/templates/: base.html  clients.html  dashboard.html  login.html  logs.html  settings.html
app/utils/: __init__.py  minimal.py  security.py  validation.py
monitoring/: prometheus.yml
openvpn-docker/: Dockerfile  init-container.sh
tests/: conftest.py  test_api.py  test_models.py
worker/: celery_worker.py
